home/kkleine/dev/lkml/0/57760.fe9854e9ce66f7e48928e65dcc767517b8a61e50
CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#38: 
drivers/leds/leds-net48xx.c: In function ‘net48xx_error_led_set’:
                                         ^

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#39: 
drivers/leds/leds-net48xx.c:31: error: ‘scx200_gpio_ops’ undeclared 
                                       ^

WARNING:TYPO_SPELLING: 'Shouldnt' may be misspelled - perhaps 'Shouldn't'?
#49: 
Shouldnt EXPORT_SYMBOL(scx200_gpio_ops) prevent exactly that ?
^^^^^^^^

Some words may have been misspelled.  Consider reviewing them.

/tmp/tmp.gGZ8aIRHtl//home/kkleine/dev/lkml/0/patch.offset.57760.commit.fe9854e9ce66f7e48928e65dcc767517b8a61e50 total: 0 errors, 1 warnings, 2 checks, 23 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

/tmp/tmp.gGZ8aIRHtl//home/kkleine/dev/lkml/0/patch.offset.57760.commit.fe9854e9ce66f7e48928e65dcc767517b8a61e50 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
